--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - id: docker-build and push
+      - id: docker-build-and-push
         run: |
           aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 434190342226.dkr.ecr.us-east-1.amazonaws.com
           docker buildx build . -t nomad/gha-autoscaler
