--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,13 +15,15 @@ jobs:
       - uses: actions/checkout@v3
 
       - id: docker-build-and-push
+        name: Build and publish on ECR
         run: |
           aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 434190342226.dkr.ecr.us-east-1.amazonaws.com
           docker buildx build . -t nomad/gha-autoscaler
           docker tag nomad/gha-autoscaler:latest 434190342226.dkr.ecr.us-east-1.amazonaws.com/nomad/gha-autoscaler:latest
           docker push 434190342226.dkr.ecr.us-east-1.amazonaws.com/nomad/gha-autoscaler:latest
 
-      - id: Install nomad
+      - id: install-nomad
+        name: Install Nomad
         run: |
           mkdir bin
           pushd bin
@@ -31,7 +33,8 @@ jobs:
           rm nomad.zip
           popd
 
-      - id: Run nomad
+      - id: run-nomad
+        name: Run nomad
         run: |
           ./bin/nomad nomad/application.nomad
 
