Split into two sub applications. Webhook handler and celery worker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,27 @@
 services:
-  gha-app:
-    build: .
+  api:
+    build: api
+    env_file:
+      - .env
     ports:
       - 5000
     volumes:
-      - ".:/app"
+      - "./api:/app"
       - /app/__pycache__
+
+  rabbit:
+    image: "rabbitmq:3.13-management"
+    ports:
+      - 5672
+      - 15672
+
+  worker:
+    build: worker
+    ports:
+      - 5001
+    env_file:
+      - worker/.env
+    environment:
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+
